<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.valasapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSignIn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900_01">
        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnwelcomeba"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_33pxv"
            android:paddingEnd="@dimen/_23pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_33pxv" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtWelcomeback"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtWelcomeback}"
                style="@style/txtPoppinssemibold21" tools:text="@string/lbl_welcome_back"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLetsloginfor"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtLetsloginfor}"
                style="@style/txtPoppinsregular13" tools:text="@string/msg_let_s_login_for"/>
            <View android:id="@+id/viewView"
                android:layout_height="@dimen/_137pxv" android:layout_width="@dimen/_159pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEmailorphone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtEmailorphone}"
                style="@style/txtPoppinsmedium13" tools:text="@string/msg_email_or_phone_number"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_50_border_gray_50_radius_9"
                android:drawablePadding="@dimen/_12pxh"
                android:drawableStart="@drawable/drawable_img_lock"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_email"
                android:id="@+id/etPhoneNumber"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_19pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={signInVM.signInModel.etPhoneNumberValue}"
                android:textColorHint="@color/blue_gray_400"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtPassword}"
                style="@style/txtPoppinsmedium13" tools:text="@string/lbl_password"/>
            <EditText android:drawableEnd="@drawable/img_eye"
                android:drawablePadding="@dimen/_30pxh"
                android:drawableStart="@drawable/drawable_img_group"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_password"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_16pxh"
                android:paddingStart="@dimen/_19pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={signInVM.signInModel.etPasswordValue}"
                android:textColorHint="@color/blue_gray_400"
                style="@style/etPoppinsregular13" tools:ignore="Autofill"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowkeepmesigned"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:buttonTint="@color/blue_gray_100"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/checkBoxKeepMeSignedIn"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@string/msg_keep_me_signed_in"
                    android:textColor="@color/blue_gray_200"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_11pxh"
                    android:textStyle="normal" tools:text="@string/msg_keep_me_signed_in"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotpassword"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{signInVM.signInModel.txtForgotpassword}"
                    style="@style/txtPoppinsmedium12" tools:text="@string/lbl_forgot_password"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignIn"
                android:layout_height="@dimen/_53pxv"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_313pxh"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/_9pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_in"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in"/>
            <LinearLayout android:id="@+id/linearRowvector630"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/gray_100"
                    android:id="@+id/lineVector630One"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_70pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYoucanconnect"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{signInVM.signInModel.txtYoucanconnect}"
                    style="@style/txtPoppinsmedium11" tools:text="@string/msg_you_can_connect"/>
                <View android:background="@color/gray_100"
                    android:id="@+id/lineVector631One"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_90pxh"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageGoogleOne"
                android:layout_height="@dimen/_42pxh"
                android:layout_marginStart="@dimen/_125pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="@dimen/_42pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtConfirmation}"
                style="@style/txtSFProDisplaymedium11" tools:text="@string/msg_don_t_have_an_account"/>
        </LinearLayout>
    </LinearLayout>
</layout>
