<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="confirmYourEmailVM" type="com.valasapplication.app.modules.confirmyouremail.data.viewmodel.ConfirmYourEmailVM"/>
    </data>
    <LinearLayout android:id="@+id/linearConfirmYourEmail"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900_01">
        <LinearLayout android:id="@+id/linearColumnconfirmyo"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_23pxv" style="@style/groupStylewhite_A700cornerRadius">
            <FrameLayout android:id="@+id/frameStackconfirmyou"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_334pxv"
                android:layout_marginTop="@dimen/_32pxv" android:layout_width="@dimen/_327pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtConfirmyour"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_12pxh"
                    android:singleLine="true"
                    android:text="@{confirmYourEmailVM.confirmYourEmailModel.txtConfirmyour}"
                    style="@style/txtPoppinssemibold23_1" tools:text="@string/msg_confirm_your_email"/>
                <ImageView android:id="@+id/imageEnterotppana"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_313pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_enter_otp_pana_3}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_enter_otp_pana_3"/>
            </FrameLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtWevesentfive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:text="@{confirmYourEmailVM.confirmYourEmailModel.txtWevesentfive}"
                style="@style/txtNunitoSansregular13" tools:text="@string/msg_we_ve_sent_5_digits"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtEnter"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_9pxh"
                android:singleLine="true"
                android:text="@{confirmYourEmailVM.confirmYourEmailModel.txtEnter}"
                style="@style/txtPoppinsmedium15" tools:text="@string/msg_enter_verification"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_50_border_gray_50_radius_9"
                android:drawablePadding="@dimen/_30pxh"
                android:drawableStart="@drawable/img_lock_light_blue_900"
                android:ellipsize="end"
                android:hint="@string/lbl_resend_in_3_03"
                android:id="@+id/etResendtimeOne"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingStart="@dimen/_9pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={confirmYourEmailVM.confirmYourEmailModel.etResendtimeOneValue}"
                android:textColorHint="@color/blue_gray_400"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnVerifyAnd"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/msg_verify_and_create"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/msg_verify_and_create"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtNeedhelpfaq"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{confirmYourEmailVM.confirmYourEmailModel.txtNeedhelpfaq}"
                style="@style/txtPoppinssemibold13" tools:text="@string/msg_need_help_faq"/>
        </LinearLayout>
    </LinearLayout>
</layout>
