<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="getStartedVM" type="com.valasapplication.app.modules.getstarted.data.viewmodel.GetStartedVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900_01">
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameStackview"
            android:layout_height="@dimen/_710pxv"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700cornerRadius">
            <LinearLayout android:id="@+id/linearColumnview"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_231pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_67pxv"
                android:paddingEnd="@dimen/_59pxh"
                android:paddingStart="@dimen/_59pxh"
                android:paddingTop="@dimen/_67pxv" style="@style/groupStyleblack_900_01">
                <View android:id="@+id/viewView"
                    android:layout_height="@dimen/_120pxv" android:layout_width="@dimen/_227pxh"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtGrowyour"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:text="@{getStartedVM.getStartedModel.txtGrowyour}"
                    style="@style/txtPoppinssemibold23" tools:text="@string/msg_grow_your_insight"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtExplorethe"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:text="@{getStartedVM.getStartedModel.txtExplorethe}"
                    style="@style/txtRobotoregular13" tools:text="@string/msg_explore_the_world"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:drawableEnd="@drawable/drawable_img_arrowright"
                    android:drawablePadding="@dimen/_30pxh"
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnGetStarted"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_57pxv"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="@dimen/_237pxh"
                    android:paddingBottom="@dimen/_16pxv"
                    android:paddingEnd="@dimen/_19pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_get_started"
                    android:textAllCaps="true"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_get_started"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageImage"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_387pxv"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_38pxh}"
                imageRes="@{@drawable/img_rectangle_48}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_48"/>
        </FrameLayout>
    </LinearLayout>
</layout>
